sass/blog.scss
@use 'bits' as *;

//*==============================================================================
//** General Styles **
//*==============================================================================

.blog-section {
  padding: $section-spacing-small $section-spacing-large;
  background-color: $background-colour-main;

  @include breakpoint(1700) {
    padding: $section-spacing-small;
  }

  @include breakpoint(1400) {
    padding: $section-spacing-small $section-spacing-extra-small;
  }

  @include breakpoint(1100) {
    padding: $section-spacing-smaller $section-spacing-extra-small;
  }

  @include breakpoint(800) {
    padding: $section-spacing-extra-small $paragraph-spacing-small;
  }
}

.blog-heading {
  font-size: $h1-size;
  color: $background-colour-three;
  margin: 0 auto $h1-spacing;
  width: fit-content;

  @include breakpoint(1100) {
    margin-bottom: $section-spacing-smaller;
  }

  @include breakpoint(800) {
    margin-bottom: $section-spacing-extra-small;
  }
}

//*==============================================================================
//** Blog Index **
//*==============================================================================

.blog-index-section {
  @include flex(column);
  justify-content: center;
  align-items: center;
  font-size: $font-size-main;
}

.blog-index-category-list {
  width: 100%;
  min-height: 20rem;

  @include breakpoint(1100) {
    min-height: auto;
    overflow: hidden;
  }
}

.blog-index-page-subtitle {
  font-size: $font-size-main;
  width: fit-content;
  color: $font-colour-two;
  margin: 0 auto $section-spacing-extra-small;

  //  * For smaller screens
  @include breakpoint(1100) {
    cursor: pointer;
    margin: 0 auto
      calc(#{$paragraph-spacing-medium} + #{$paragraph-spacing-small});

    &::after {
      content: url('/images/blog-down-arrow.svg');
      transition: $transition-two-cubic;
      display: inline-block;
      margin-left: $paragraph-spacing-small;
      transform: rotate(180deg);
    }
  }

  @include breakpoint(400) {
    &::after {
      margin-left: 0;
    }
  }
}

.blog-index-page-subtitle-reveal {
  &::after {
    transform: rotate(0);
  }
}

.blog-categories-ul {
  @include flex(row);
  justify-content: space-between;
  padding: 0;
  margin: 0 auto $section-spacing-small;

  @include breakpoint(1100) {
    @include flex(column);
    margin: 0 auto $section-spacing-smaller;
    justify-content: flex-start;
    align-items: center;
    clip-path: inset(0 0 100% 0);
    transform: translateY(-1rem);
    transition: $transition-two-cubic;
  }

  @include breakpoint(800) {
    margin: 0 auto $section-spacing-extra-small;
  }
}

.blog-categories-ul-reveal {
  clip-path: inset(0 0 0 0);
  opacity: 1;
  transform: translateY(0);
}

.blog-categories-li {
  list-style-type: none;
  width: fit-content;
  margin: 0 $paragraph-spacing-small;
  padding: 0;

  &:nth-of-type(3n + 1) {
    color: $font-colour-three;
  }

  &:nth-of-type(3n + 2) {
    color: $font-colour-four;
  }
  &:nth-of-type(3n + 3) {
    color: $font-colour-main;
  }

  @include breakpoint(1100) {
    margin: 0 auto $paragraph-spacing-medium;

    &:last-of-type {
      margin-bottom: 0;
    }
  }
}

.blog-category-link {
  font-size: $font-size-small;
  text-decoration: none;
  display: inline-block;
  width: fit-content;
  text-align: center;
  color: inherit;
}

.blog-index-wrapper {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: $section-spacing-small;

  @include breakpoint(1100) {
    transform: translateY(-40rem);
    transition: $transition-two-cubic;
    grid-template-columns: repeat(1, 1fr);
    gap: $section-spacing-extra-small;
  }

  @include breakpoint(800) {
    transform: translateY(-35rem);
  }

  @include breakpoint(500) {
    transform: translateY(-39rem);
  }

  @include breakpoint(350) {
    transform: translateY(-42rem);
  }
}

.category-push-down {
  transform: translateY(0);
}

.blog-index-item {
  &:nth-of-type(4n + 1) {
    color: $font-colour-two;
  }

  &:nth-of-type(4n + 2) {
    color: $font-colour-three;
  }

  &:nth-of-type(4n + 3) {
    color: $font-colour-four;
  }

  &:nth-of-type(4n + 4) {
    color: $font-colour-main;
  }
}

.blog-index-title {
  text-align: center;
  margin: 0;
  font-size: $font-size-main;
  opacity: 0;
  transform: rotateX(90deg);
  transition: $transition-one;
}

.title-reveal {
  opacity: 1;
  transform: rotateX(0);
}

.blog-index-title-link {
  color: inherit;
  text-decoration: none;
}

//*==============================================================================
//** Blog Archive **
//*==============================================================================

.archive-page-heading {
  text-align: center;
}

//*==============================================================================
//** Blog Post **
//*==============================================================================

.blog-post-section {
  @include flex(column);
}

.blog-post-title {
  order: 1;
}

.blog-post-image {
  width: 100%;
  padding: 0;
  margin: 0 auto $section-spacing-small;

  @include breakpoint(1100) {
    margin: 0 auto $section-spacing-smaller;
  }

  @include breakpoint(800) {
    margin: 0 auto $section-spacing-extra-small;
  }
}

.blog-text-block {
  color: $font-colour-four;
  width: 100%;
  margin: 0 auto $section-spacing-small;

  @include breakpoint(1100) {
    margin: 0 auto $section-spacing-smaller;
  }

  @include breakpoint(800) {
    margin: 0 auto $section-spacing-extra-small;
  }

  p {
    margin: 0 auto $paragraph-spacing-medium;

    &:last-of-type {
      margin-bottom: 0;
    }
  }
}

.post-wrapper {
  order: 3;
}

.post-category-wrapper {
  text-align: center;
  margin: 0 auto $section-spacing-small;
  order: 2;

  @include breakpoint(1100) {
    margin: 0 auto $section-spacing-smaller;
  }

  @include breakpoint(800) {
    margin: 0 auto $section-spacing-extra-small;
  }
}

.post-categories-link {
  text-decoration: none;
  color: $font-colour-two;
}

.post-body-wrapper {
  @include flex(column);
  order: 3;
}

.blog-post-date-author {
  text-align: center;
  color: $font-colour-two;
}

